2008-11-24  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1955483:
    * source/org/jfree/data/xy/XYSeries.java
    (addOrUpdate): Check early for duplicates allowed,
    * tests/org/jfree/data/xy/junit/XYSeriesTests.java
    (testBug1955483): New test.

2008-11-18  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2216511:
    * swt/org/jfree/experimental/chart/demo/SWTBarChartDemo1.java
    (createChart): Reset the bar painter to avoid using gradients,
    * swt/org/jfree/experimental/swt/SWTGraphics2D.java
    (setPaint): Don't fail for GradientPaint.

2008-11-13  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2275695:
    * source/org/jfree/chart/axis/SubCategoryAxis.java
    (drawSubCategoryLabels): Check for null,
    * tests/org/jfree/chart/axis/junit/SubCategoryAxisTests.java
    (test2275695): New method.

2008-11-05  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2221495:
    * source/org/jfree/chart/annotations/XYLineAnnotation.java
    (draw): Clip line before drawing,
    * source/org/jfree/chart/util/LineUtilities.java: New file,
    * tests/org/jfree/chart/util/junit/LineUtilitiesTests.java: Likewise.

2008-10-27  David Gilbert  <david.gilbert@object-refinery.com> 

    * source/org/jfree/chart/axis/CategoryAxis.java
    (refreshTicks): Set correct for for category label.

2008-10-23  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartFactory.java
    (setChartTheme): Check if theme is "Legacy" and reset default bar painters.

2008-10-15  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/LegendItem.java
    (LegendItem(String, Paint)): New constructor.

2008-10-08  David Gilbert  <david.gilbert@object-refinery.com>

    Incorporating patch 2131001:
    * source/org/jfree/data/general/DatasetUtilities.java
    (iterateDomainBounds(XYDataset, boolean)): Ignore Double.NaN values,