@@ -95,6 +95,7 @@
  * 18-May-2007 : Set dataset and seriesKey for LegendItem (DG);
  * 17-Jun-2008 : Apply legend shape, font and paint attributes (DG);
  * 26-Jun-2008 : Added crosshair support (DG);
+ * 25-Nov-2008 : Fixed bug in findRangeBounds() method (DG);
  *
  */
 
@@ -672,6 +673,9 @@ public abstract class AbstractCategoryItemRenderer extends AbstractRenderer
      *         <code>null</code> or empty).
      */
     public Range findRangeBounds(CategoryDataset dataset) {
+        if (dataset == null) {
+            return null;
+        }
         return DatasetUtilities.findRangeBounds(dataset);
     }
 
