@@ -68,7 +68,12 @@ import org.jfree.util.PublicCloneable;
 
 /**
  * A renderer that draws stacked bars within groups.  This will probably be
- * merged with the {@link StackedBarRenderer} class at some point.
+ * merged with the {@link StackedBarRenderer} class at some point.  The example
+ * shown here is generated by the <code>StackedBarChartDemo4.java</code>
+ * program included in the JFreeChart Demo Collection:
+ * <br><br>
+ * <img src="../../../../../images/GroupedStackedBarRendererSample.png"
+ * alt="GroupedStackedBarRendererSample.png" />
  */
 public class GroupedStackedBarRenderer extends StackedBarRenderer
         implements Cloneable, PublicCloneable, Serializable {
@@ -111,6 +116,9 @@ public class GroupedStackedBarRenderer extends StackedBarRenderer
      *         <code>null</code> or empty).
      */
     public Range findRangeBounds(CategoryDataset dataset) {
+        if (dataset == null) {
+            return null;
+        }
         Range r = DatasetUtilities.findStackedRangeBounds(
                 dataset, this.seriesToGroupMap);
         return r;
