@@ -114,8 +114,13 @@ import org.jfree.ui.TextAnchor;
 import org.jfree.util.PublicCloneable;
 
 /**
- * A stacked bar renderer for use with the
- * {@link org.jfree.chart.plot.CategoryPlot} class.
+ * A stacked bar renderer for use with the {@link CategoryPlot} class.
+ * The example shown here is generated by the
+ * <code>StackedBarChartDemo1.java</code> program included in the
+ * JFreeChart Demo Collection:
+ * <br><br>
+ * <img src="../../../../../images/StackedBarRendererSample.png"
+ * alt="StackedBarRendererSample.png" />
  */
 public class StackedBarRenderer extends BarRenderer
         implements Cloneable, PublicCloneable, Serializable {
@@ -205,6 +210,9 @@ public class StackedBarRenderer extends BarRenderer
      * @return The range (or <code>null</code> if the dataset is empty).
      */
     public Range findRangeBounds(CategoryDataset dataset) {
+        if (dataset == null) {
+            return null;
+        }
         if (this.renderAsPercentages) {
             return new Range(0.0, 1.0);
         }
