@@ -37,6 +37,7 @@
  * 12-Feb-2004 : Version 1 (DG);
  * 24-Nov-2006 : New cloning tests (DG);
  * 07-Dec-2006 : Added testEquals() method (DG);
+ * 25-Nov-2008 : Added testFindRangeBounds() (DG);
  *
  */
 
@@ -54,7 +55,10 @@ import org.jfree.chart.labels.StandardCategorySeriesLabelGenerator;
 import org.jfree.chart.labels.StandardCategoryToolTipGenerator;
 import org.jfree.chart.renderer.category.AbstractCategoryItemRenderer;
 import org.jfree.chart.renderer.category.BarRenderer;
+import org.jfree.chart.renderer.category.LineAndShapeRenderer;
 import org.jfree.chart.urls.StandardCategoryURLGenerator;
+import org.jfree.data.Range;
+import org.jfree.data.category.DefaultCategoryDataset;
 
 /**
  * Tests for the {@link AbstractCategoryItemRenderer} class.
@@ -327,6 +331,27 @@ public class AbstractCategoryItemRendererTests extends TestCase {
         // check that the generator has been cloned
         assertTrue(r1.getLegendItemURLGenerator()
                 != r2.getLegendItemURLGenerator());
+    }
+
+    /**
+     * Some checks for the findRangeBounds() method.
+     */
+    public void testFindRangeBounds() {
+        AbstractCategoryItemRenderer r = new LineAndShapeRenderer();
+        assertNull(r.findRangeBounds(null));
+
+        // an empty dataset should return a null range
+        DefaultCategoryDataset dataset = new DefaultCategoryDataset();
+        assertNull(r.findRangeBounds(dataset));
+
+        dataset.addValue(1.0, "R1", "C1");
+        assertEquals(new Range(1.0, 1.0), r.findRangeBounds(dataset));
+
+        dataset.addValue(-2.0, "R1", "C2");
+        assertEquals(new Range(-2.0, 1.0), r.findRangeBounds(dataset));
+
+        dataset.addValue(null, "R1", "C3");
+        assertEquals(new Range(-2.0, 1.0), r.findRangeBounds(dataset));
     }
 
 }
