@@ -53,6 +53,8 @@ import junit.framework.TestCase;
 import junit.framework.TestSuite;
 
 import org.jfree.chart.renderer.category.StackedBarRenderer;
+import org.jfree.data.Range;
+import org.jfree.data.category.DefaultCategoryDataset;
 import org.jfree.util.PublicCloneable;
 
 /**
@@ -145,8 +147,7 @@ public class StackedBarRendererTests extends TestCase {
             out.close();
 
             ObjectInput in = new ObjectInputStream(
-                new ByteArrayInputStream(buffer.toByteArray())
-            );
+                    new ByteArrayInputStream(buffer.toByteArray()));
             r2 = (StackedBarRenderer) in.readObject();
             in.close();
         }
@@ -155,6 +156,33 @@ public class StackedBarRendererTests extends TestCase {
         }
         assertEquals(r1, r2);
 
+    }
+
+    /**
+     * Some checks for the findRangeBounds() method.
+     */
+    public void testFindRangeBounds() {
+        StackedBarRenderer r = new StackedBarRenderer();
+        assertNull(r.findRangeBounds(null));
+
+        // an empty dataset should return a null range
+        DefaultCategoryDataset dataset = new DefaultCategoryDataset();
+        assertNull(r.findRangeBounds(dataset));
+
+        dataset.addValue(1.0, "R1", "C1");
+        assertEquals(new Range(0.0, 1.0), r.findRangeBounds(dataset));
+
+        dataset.addValue(-2.0, "R1", "C2");
+        assertEquals(new Range(-2.0, 1.0), r.findRangeBounds(dataset));
+
+        dataset.addValue(null, "R1", "C3");
+        assertEquals(new Range(-2.0, 1.0), r.findRangeBounds(dataset));
+
+        dataset.addValue(2.0, "R2", "C1");
+        assertEquals(new Range(-2.0, 3.0), r.findRangeBounds(dataset));
+
+        dataset.addValue(null, "R2", "C2");
+        assertEquals(new Range(-2.0, 3.0), r.findRangeBounds(dataset));
     }
 
 }
